# RPi_spi_mcp3002

./: LICENSE.txt  README.md  pyproject.toml
Documents/: EN_README.md  FR_README.md
Documents/EN/: MCP3002_EN_Desc_pin_fonctionnality.txt  MCP3002_EN_Digital_output_code.txt
Documents/FR/: MCP3002_FR_Desc_pin_fonctionnality.txt  MCP3002_FR_Digital_output_code.txt
Documents/FR/STEP_1/: FR_HARDWARE.md  FR_MEASURING_CHAIN.md  FR_SOFT.md  FR_STUDY_MCP3002.md  FR_STUDY_TMP36.md  FR_TESTS.md  FR_WIRING.md
Documents/FR/STEP_2/: FR_CODEFIX.md  FR_STUDY_COMUNICATION.md  FR_STUDY_SPI.md  FR_STUDY_SPIDEV.md
Documents/FR/STEP_3/: FR_EXCEL_COOLING.md  FR_EXCEL_WARM_UP.md  FR_HARDWARE.md  FR_SOFT.md  FR_TARGET_ADDRESSING.md  FR_WIRING.md
Documents/FR/STEP_4/: FR_EXCEL_COOLING.md  FR_EXCEL_WARM_UP.md  FR_HARDWARE.md  FR_SOFT.md  FR_TARGET_ADDRESSING.md  FR_WIRING.md
