[project]
name = "RPi_spi_mcp3002"
version = "0.0.0"
authors = [
  { name="rasp-66-psar", email="chabry.dominique@orange.fr" },
]
description = "Information and code to manage SPI  Raspberry 3B, 3B+, Zero 2W with ACD MCP3002"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["Raspberry", "3B+", "Zero", "MCP3002", "mcp3002"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dmtmgrls/RPi_spi_mcp3002.git"
Issues = "https://github.com/pypa/sampleproject/issues"

